--- a/Дипломная работа по профессии «Системный администратор».md
+++ b/Дипломная работа по профессии «Системный администратор».md
@@ -110,3 +110,7 @@ ansible-playbook zabbix.yaml
 На этом задачи дипломной работы можно считать выполненными.
 
 
+Доступ к ресурсам:
+load balancer 158.160.128.209
+kibana 158.160.110.250
+zabbix 158.160.100.194 логин и пароль по умолчанию
